; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgCreateImage.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgCreateImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvgCreateImage(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = call i32 @stbi_set_unpremultiply_on_load(i32 1)
  %14 = call i32 @stbi_convert_iphone_png_to_rgb(i32 1)
  %15 = load i8*, i8** %6, align 8
  %16 = call i8* @stbi_load(i8* %15, i32* %8, i32* %9, i32* %10, i32 4)
  store i8* %16, i8** %12, align 8
  %17 = load i8*, i8** %12, align 8
  %18 = icmp eq i8* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

20:                                               ; preds = %3
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i8*, i8** %12, align 8
  %26 = call i32 @nvgCreateImageRGBA(i32* %21, i32 %22, i32 %23, i32 %24, i8* %25)
  store i32 %26, i32* %11, align 4
  %27 = load i8*, i8** %12, align 8
  %28 = call i32 @stbi_image_free(i8* %27)
  %29 = load i32, i32* %11, align 4
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %20, %19
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @stbi_set_unpremultiply_on_load(i32) #1

declare dso_local i32 @stbi_convert_iphone_png_to_rgb(i32) #1

declare dso_local i8* @stbi_load(i8*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @nvgCreateImageRGBA(i32*, i32, i32, i32, i8*) #1

declare dso_local i32 @stbi_image_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
